hotfix: fixed the scrollbar problem

--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -2,12 +2,13 @@
 
 .card {
     border: none;
-    width: 250px;
+    width: 300px;
     height: 500px;
     margin: 0 10px;
 
     .image {
         height: 50%;
+        overflow: hidden;
     }
 
     .content {
