--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,3 +1,7 @@
 .main {
+    display: flex;
     padding: 5px;
+    flex-wrap: wrap;
 }
+
+
