--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: hidden;
+    overflow: scroll;
+    scroll-behavior: smooth;
 }
 
 body {
